fix: change content alignment to center on mobile

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -36,7 +36,7 @@
 	background-image: url("./assets/icons/image-regular.svg");
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-size: clamp(15rem, 16vw, 18rem);
+	background-size: clamp(20rem, 50%, 28rem);
 	z-index: 0;
 }
 
